--- a/backstage/steps/merge-json/step.yaml
+++ b/backstage/steps/merge-json/step.yaml
@@ -1,9 +1,8 @@
 id: add-command
-name: Add some scripts to package.jons
+name: Add some scripts to package.json
 action: json:merge
 input:
   path: package.json
   content:
     scripts:
       test: "npm test"
-
