add more files for template

--- a/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
+++ b/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
@@ -50,6 +50,6 @@ jobs:
     secrets: inherit
     with:
       PROJECT_NAME: ${{values.repo_name}}
-      NEW_TEMPLATE_WIDGET_TYPE: 'PromotedProducts'
+      NEW_TEMPLATE_WIDGET_TYPE: ${{values.widgetType}}
       SLACK_ROOMS: pixels-changelog
       DEPLOY_CUSTOMIZATIONS: true
