--- a/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
+++ b/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       run-lint: 'npm run lint'
       run-unit-tests: ''
       warn-npm-updates: false
-      dependencies: '@ugc-storefont/core' # todo
+      dependencies: '@ugc-storefont/core'
 
   # Build Docker Image
   docker-build:
@@ -50,6 +50,6 @@ jobs:
     secrets: inherit
     with:
       PROJECT_NAME: ${{values.repo_name}}
-      NEW_TEMPLATE_WIDGET_TYPE: ${{values.widgetType}}
-      SLACK_ROOMS: pixels-changelog
+      NEW_TEMPLATE_WIDGET_TYPE: ${{values.widgetName}}
+      SLACK_ROOMS: ${{values.slack_channel}}
       DEPLOY_CUSTOMIZATIONS: true
