update tempalte file

--- a/copy/frontend/create-petite-vue-widget/skeleton/catalog-info.yaml
+++ b/copy/frontend/create-petite-vue-widget/skeleton/catalog-info.yaml
@@ -7,9 +7,9 @@ metadata:
     github.com/project-slug: YotpoLtd/${{ values.repo_name }}
     backstage.io/techdocs-ref: dir:.
   tags:
+    - lighthouse
     - widget-v3
-    - ugc
-    - shopper-experience
+    - ${{ values.product_line }}
 spec:
   type: widget
   lifecycle: production
