--- a/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
+++ b/copy/frontend/create-petite-vue-widget/skeleton/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       run-lint: 'npm run lint'
       run-unit-tests: ''
       warn-npm-updates: false
-      dependencies: '@ugc-storefont/core'
+      dependencies: 'widgets-shared-services,widget-initializer'
 
   # Build Docker Image
   docker-build:
@@ -49,7 +49,7 @@ jobs:
     uses: YotpoLtd/widget-v3-code-utils/.github/workflows/jenkins-deploy-reusable.yaml@jenkins-deploy-reusable.v0
     secrets: inherit
     with:
-      PROJECT_NAME: ${{values.repo_name}}
-      NEW_TEMPLATE_WIDGET_TYPE: ${{values.widgetName}}
+      PROJECT_NAME: ${{ values.repo_name }}
+      NEW_TEMPLATE_WIDGET_TYPE: '${{ values.widgetName }}'
       SLACK_ROOMS: ${{values.slack_channel}}
       DEPLOY_CUSTOMIZATIONS: true
