--- a/copy/frontend/create-petite-vue-widget/skeleton/package.json
+++ b/copy/frontend/create-petite-vue-widget/skeleton/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "${{values.repo_name}}",
+  "name": "${{ values.repo_name }}",
   "private": true,
   "version": "0.0.1",
   "engines": {
@@ -19,15 +19,17 @@
     "test:e2e:headless": "npx cypress run --headless --record --key $CYPRESS_PROJECT_KEY --config --projectId $CYPRESS_PROJECT_ID",
     "test:e2e:cypress:run:local": "concurrently  --kill-others --success first \"npm run serve\" \"npm run test:e2e\"",
     "test:e2e:cypress:run:prod": "concurrently  --kill-others --success first \"npm run serve:prod\" \"npm run test:e2e\"",
-    "test:e2e:cypress:run:headless": "concurrently --kill-others --success first \"npm run serve:prod\" \"npm run test:e2e:headless\""
+    "test:e2e:cypress:run:headless": "concurrently --kill-others --success first \"npm run serve:prod\" \"npm run test:e2e:headless\"",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@ugc-storefront/core": "^1.1.2",
     "axios": "^1.1.3",
-    "petite-vue": "^0.4.1"
+    "petite-vue": "^0.4.1",
+    "widget-initializer": "^0.1.3",
+    "widgets-shared-services": "^1.2.0"
   },
   "devDependencies": {
-    "@applitools/eyes-cypress": "^3.27.8",
+    "@applitools/eyes-cypress": "3.27.8",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.9",
     "@types/uuid": "^8.3.4",
@@ -39,8 +41,10 @@
     "cypress": "^11.2.0",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.1",
     "terser": "^5.16.1",
     "typescript": "^4.9.3",
@@ -49,5 +53,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "lint-staged": {
+    "*.{ts}": ["prettier --write", "eslint --cache --fix"]
+  }
 }
