--- a/copy/frontend/create-petite-vue-widget/skeleton/package.json
+++ b/copy/frontend/create-petite-vue-widget/skeleton/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "lint": "eslint --max-warnings=0 --no-fix . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "serve": "tsc && vite",
+    "serve": "tsc --watch & vite",
     "serve:prod": "npm run build && vite preview",
     "lhci:run": "npm run serve:prod",
     "build": "tsc && vite build",
@@ -25,6 +25,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "petite-vue": "^0.4.1",
+    "vite-plugin-ejs": "^1.6.4",
+    "vite-plugin-html-template": "^1.1.5",
+    "vite-plugin-static-copy": "^0.13.1",
     "widget-initializer": "^0.1.3",
     "widgets-shared-services": "^1.2.0"
   },
@@ -55,6 +58,9 @@
     "dist"
   ],
   "lint-staged": {
-    "*.{ts}": ["prettier --write", "eslint --cache --fix"]
+    "*.ts": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
